tests/NormalTests/paczka1/small_fuzzy/10129324.err
Error in line 3: fRPgw S202 32,78
Error in line 1: fRPgw A157 94,3
Error in line 5: jdgWPu A157 83,8
